# CAPA

./: .gitignore  .travis.yml  README.md
CAPA-core/: CMakeLists.txt  LICENSE
CAPA-core/cmake/: CAPAConfig.cmake
CAPA-core/include/CAPA/: AbstractResults.h  BenchmarkSet.h  PatternInfo.h  RawResults.h  Reporter.h  Results.h  RuleCarrier.h  RuleSet.h  UniqueResults.h  Version.h  Violation.h  ViolationSet.h
CAPA-core/include/nlohmann/: LICENSE
CAPA-core/lib/: BenchmarkSet.cpp  CMakeLists.txt  PatternInfo.cpp  RawResults.cpp  ResultCollector.cpp  RuleCarrier.cpp  RuleSet.cpp  Version.cpp  Violation.cpp  ViolationSet.cpp
CAPA-core/test/: CMakeLists.txt  ResultCollectorTest.cpp  RuleCarrierTest.cpp  RuleConfigurationTest.cpp  VersionTest.cpp
CAPA-driver/: CMakeLists.txt  LICENSE  main.cpp  reporters.h  reporters_dlfcn_port.cpp  reporters_windows_port.cpp  rules_dlfcn_port.cpp  rules_windows_port.cpp
CAPA-driver/lib/: CMakeLists.txt  CompilerInstance.cpp  ConfigFile.cpp  DiagnosticDispatcher.cpp  Driver.cpp  GenericException.cpp  Logger.cpp  Options.cpp  RulesetFilter.cpp
CAPA-metrics/lib/: CyclomaticComplexityMetric.cpp  NPathComplexityMetric.cpp  StmtDepthMetric.cpp
CAPA-metrics/test/: NcssMetricTest.cpp  StmtDepthMetricTest.cpp
CAPA-reporters/: CMakeLists.txt  LICENSE
CAPA-reporters/reporters/: CMakeLists.txt  HTMLReporter.cpp  JSONReporter.cpp  PMDReporter.cpp  TextReporter.cpp  XMLReporter.cpp  XcodeReporter.cpp
CAPA-reporters/template/: Reporter.tmpl  ReporterTest.tmpl
CAPA-reporters/test/: CMakeLists.txt  HTMLReporterTest.cpp  JSONReporterTest.cpp  ReportTestResults.h  TextReporterTest.cpp  XMLReporterTest.cpp
CAPA-rules/: CMakeLists.txt
CAPA-rules/include/CAPA/: AbstractASTRuleBase.h  AbstractASTVisitorRule.h  AbstractSourceCodeReaderRule.h
CAPA-rules/include/CAPA/helper/: AttributeHelper.h  EnforceHelper.h  MatcherHelper.h  MathcerHelper.h  SuppressHelper.h
CAPA-rules/include/CAPA/util/: ASTUtil.h  MyASTUtil.h  StdUtil.h
CAPA-rules/lib/: AbstractASTMatcherRule.cpp  AbstractASTRuleBase.cpp  AbstractSourceCodeReaderRule.cpp  CMakeLists.txt
CAPA-rules/lib/helper/: AttributeHelper.cpp  CMakeLists.txt  EnforceHelper.cpp  SuppressHelper.cpp
CAPA-rules/lib/util/: CMakeLists.txt  StdUtil.cpp
CAPA-rules/rules/: CMakeLists.txt
CAPA-rules/rules/abstract/: AbstractEmptyBlockStmtRule.h  AbstractNullCheckRule.h
CAPA-rules/rules/basic/: BrokenOddnessCheckRule.cpp  ConstantConditionalOperatorRule.cpp  ForLoopShouldBeWhileLoopRule.cpp  GotoStatementRule.cpp  JumbledIncrementerRule.cpp  MultipleUnaryOperatorRule.cpp  ReturnFromFinallyBlockRule.cpp  ThrowExceptionFromFinallyBlockRule.cpp
CAPA-rules/rules/cocoa/: ObjCVerifyIsEqualHashRule.cpp  ObjCVerifyProhibitedCallRule.cpp  ObjCVerifySubclassMustImplementRule.cpp
CAPA-rules/rules/convention/: CoveredSwitchStatementsDontNeedDefaultRule.cpp  DefaultLabelNotLastInSwitchStatementRule.cpp  MissingBreakInSwitchStatementRule.cpp  NonCaseLabelInSwitchStatementRule.cpp  ParameterReassignmentRule.cpp  PreferEarlyExitRule.cpp  TooFewBranchesInSwitchStatementRule.cpp
CAPA-rules/rules/design/: AvoidDefaultArgumentsOnVirtualMethodsRule.cpp  AvoidPrivateStaticMembersRule.cpp  FeatureEnvyRule.cpp
CAPA-rules/rules/empty/: EmptyDoWhileStatementRule.cpp  EmptyElseBlockRule.cpp  EmptyFinallyStatementRule.cpp  EmptySwitchStatementRule.cpp
CAPA-rules/rules/migration/: ObjCContainerLiteralsRule.cpp  ObjCObjectSubscriptingRule.cpp
CAPA-rules/rules/naming/: LongVariableNameRule.cpp
CAPA-rules/rules/parallel/: CMakeLists.txt  ConstantFoldRule.cpp  MapRule.cpp  MatrixMultRule.cpp  ReduceRule.cpp  ScanRule.cpp  VectorFunctionDeclRule.cpp  VectorisableRule.cpp
CAPA-rules/rules/redundant/: RedundantConditionalOperatorRule.cpp  RedundantIfStatementRule.cpp  RedundantLocalVariableRule.cpp  UnnecessaryNullCheckForCXXDeallocRule.cpp  UselessParenthesesRule.cpp
CAPA-rules/rules/size/: LongLineRule.cpp  LongMethodRule.cpp  NcssMethodCountRule.cpp
CAPA-rules/rules/unused/: UnusedMethodParameterRule.cpp
CAPA-rules/template/: ASTMatcherRule.tmpl  GenericRule.tmpl
CAPA-rules/test/: CMakeLists.txt
CAPA-rules/test/Parallel/: CMakeLists.txt  MapRuleTest.cpp  ReduceRuleRuleTest.cpp  ReduceRuleTest.cpp  ScanRuleRuleTest.cpp
CAPA-rules/test/abstract/: LanguageSelectionTest.cpp
CAPA-rules/test/basic/: CollapsibleIfStatementsRuleTest.cpp
CAPA-rules/test/cocoa/: ObjCVerifyMustCallSuperRuleTest.cpp  ObjCVerifyProtectedMethodRuleTest.cpp  ObjCVerifySubclassMustImplementRuleTest.cpp
CAPA-rules/test/convention/: BaseClassDestructorShouldBeVirtualOrProtectedRuleTest.cpp
CAPA-rules/test/custom/: BigTest.cpp  CMakeLists.txt  Ignore.cpp  Maps.cpp  MapsNot.cpp  MatrixMult.cpp  Reduce.cpp  Scan.cpp  gcc-loops.cpp
CAPA-rules/test/headers/: TestEngine.h
CAPA-rules/test/helper/: AttributeHelperTest.cpp
CAPA-rules/test/parallel/: MapRuleRuleTest.cpp  ScanRuleTest.cpp
CAPA-rules/test/size/: CyclomaticComplexityRuleTest.cpp  NPathComplexityRuleTest.cpp  TooManyParametersRuleTest.cpp
CAPA-scripts/: README  build  bundle  ci  googleTest  makeWithSystemLLVM  scaffoldReporter  system-headers.sh  test  upload
CAPA-scripts/CAPAscripts/: cmake.py  path.py  version.py
case/: CodeUnderTest.cpp  includes.h  main.html  test.html  test.txt
oclint-core/cmake/: OCLintConfig.cmake
oclint-core/lib/: AbstractResults.cpp  RuleConfiguration.cpp  UniqueResults.cpp  Violation.cpp
oclint-core/test/: RawResultsTest.cpp  RuleSetTest.cpp  UniqueResultsTest.cpp  ViolationSetTest.cpp  ViolationTest.cpp
oclint-driver/: CMakeLists.txt  main.cpp
oclint-driver/include/oclint/: CompilerInstance.h  Logger.h  Options.h  RulesetFilter.h
oclint-driver/lib/: Options.cpp  RulesetBasedAnalyzer.cpp
oclint-metrics/: CMakeLists.txt
oclint-metrics/include/oclint/metric/: CyclomaticComplexityMetric.h  StmtDepthMetric.h
oclint-metrics/lib/: NcssMetric.cpp
oclint-metrics/test/: CyclomaticComplexityMetricTest.cpp  NPathComplexityMetricTest.cpp
oclint-rules/: CMakeLists.txt
oclint-scripts/: build  bundle  ci  clang  dogFooding  scaffoldRule
(+85 files in other folders)
