CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(CAPA_RULES)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    "${CMAKE_CURRENT_SOURCE_DIR}/../CAPA-core/cmake"
    )
    
INCLUDE(CAPAConfig)

INCLUDE_DIRECTORIES(
    ${CAPA_SOURCE_DIR}/include
    ${CAPA_RULES_SOURCE_DIR}/include
    ${CAPA_RULES_SOURCE_DIR}
    )
LINK_DIRECTORIES(
    ${CAPA_BUILD_DIR}/lib
    )

ADD_SUBDIRECTORY(lib)

IF(TEST_BUILD)
    INCLUDE_DIRECTORIES(${CAPA_RULES_SOURCE_DIR}/test/headers)
    ADD_SUBDIRECTORY(test)
ELSE(TEST_BUILD)
    ADD_SUBDIRECTORY(rules)
ENDIF()
